Try to run again

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 applications:
 - services:
   - Twilio-b0
+  buildpack: https://github.com/cloudfoundry/cf-buildpack-python
   disk_quota: 1024M
   host: whatthecrop
   name: whatthecrop
@@ -8,3 +9,4 @@ applications:
   domain: mybluemix.net
   instances: 1
   memory: 128M
+  command: sh run.sh
